[package]
name = "egui_vertical_stack"
version = "0.1.1"
edition = "2024"
documentation = "https://docs.rs/egui_vertical_stack"
repository = "https://github.com/MakerPnP/egui_vertical_stack"
homepage = "https://github.com/MakerPnP/egui_vertical_stack"
license = "MIT OR Apache-2.0"
authors = [
    "Dominic Clifton <me@dominicclifton.name>"
]
description = "A vertical stack widget with resize handles for egui"
readme = "README.md"
keywords = ["egui", "gui", "widget", "panels", "resize"]
categories = ["gui"]
include = [
    "assets/**/*",
    "examples/**/*",
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
]

[features]
# for developers, adds overlays on various elements to aid with debugging
layout_debugging = []

[dependencies]
egui = "0.32.0"

[dev-dependencies]
eframe = { version = "0.32.0", features = ["wgpu"] }